// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuickAccessCard/> renders QuickAccessCard correctly  1`] = `
<div>
  <div
    class="sc-bdfBwQ kjmIBZ"
  >
    <div
      class="sc-jSgupP leSHHO"
      tabindex="-1"
    >
      <div
        class="sc-gsTCUz cSuJme"
      >
        <img
          alt="card-img"
          src="https://images.unsplash.com/photo-1603881568692-1429786f5ce1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
        />
      </div>
      <div
        class="sc-dlfnbm bEflta"
      >
        <div
          class="sc-hKgILt cOJQlc"
        >
          23987532950 - The Fleet Fox
        </div>
        <div
          class="sc-eCssSg gzwAIZ"
        >
          Shirts/Flanne
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<QuickAccessCard/> should render QuickAccessCard after click 1`] = `
<div>
  <div
    class="sc-bdfBwQ eBWOhk"
  >
    <div
      class="sc-jSgupP leSHHO"
      tabindex="-1"
    >
      <div
        class="sc-gsTCUz cSuJme"
      >
        <img
          alt="card-img"
          src="https://images.unsplash.com/photo-1603881568692-1429786f5ce1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
        />
      </div>
      <div
        class="sc-dlfnbm bEflta"
      >
        <div
          class="sc-hKgILt cOJQlc"
        >
          23987532950 - The Fleet Fox
        </div>
        <div
          class="sc-eCssSg gzwAIZ"
        >
          Shirts/Flanne
        </div>
      </div>
    </div>
  </div>
</div>
`;
